overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind components;
 
 body {
-  background-color: #181622;
+  overflow-x: hidden;
+  background-color: #0e0d14;
 }
 
 .button {
